test/visibility/rename/renameUsedMod/renameSameNameEnumInScopeQualified2.good
renameSameNameEnumInScopeQualified2.chpl:9: In function 'main':
renameSameNameEnumInScopeQualified2.chpl:10: error: 'L' is ambiguous
